Fix bleeding word

--- a/app/static/bootstrap/css/custom.css
+++ b/app/static/bootstrap/css/custom.css
@@ -121,3 +121,7 @@ padding-top: 25px;
 .remember-me{
     margin-bottom: 15px;
 }
+
+.w-break{
+    word-break: break-all;
+}
